--- a/glazzite/src/Main.css
+++ b/glazzite/src/Main.css
@@ -3,12 +3,13 @@
     /* justify-content: center; */
     padding-top: 2%;
     padding-left: 10%;
+    padding-bottom: 2%;
     /* padding-right: 10%; */
 
 }
 
 #about {
-    width: 100%;
+    width: 90%;
 }
 
 img {
